--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,7 @@
             لوحة القيادة
           </a>
 
-          <a href="notifications.html">
+          <a href="#">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
