--- a/notifications.html
+++ b/notifications.html
@@ -250,10 +250,10 @@
             <h1>التنبيهات</h1>
           </div>
           <div class="header-right">
-            <div class="search-box">
+            <!--<div class="search-box">
               <input type="text" placeholder="اكتب هنا..." />
               <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
+            </div>-->
             <button class="icon-btn" id="themeToggle">
               <i class="fa-regular fa-moon"></i>
             </button>
