--- a/dashboard.html
+++ b/dashboard.html
@@ -79,7 +79,7 @@
             لوحة القيادة
           </a>
 
-          <a href="#" id="notificationLink">
+          <a href="notifications.html">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
             <span class="notification-badge hidden" id="notificationBadge"
