--- a/dashboard.html
+++ b/dashboard.html
@@ -79,6 +79,27 @@
             لوحة القيادة
           </a>
 
+          <a href="notifications.html" id="notificationLink">
+            <i class="fa-solid fa-bell"></i>
+            التنبيهات
+            <span class="notification-badge hidden" id="notificationBadge"
+              >0</span
+            >
+          </a>
+
+          <a href="notifications.html">
+            <i class="fa-solid fa-rocket"></i>
+            اشعارات
+          </a>
+
+          <a href="notifications.html">
+            <i class="fa-solid fa-bell"></i>
+            التنبيهات
+            <span class="notification-badge hidden" id="notificationBadge"
+              >0</span
+            >
+          </a>
+
           <a href="notifications.html">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
