--- a/dashboard.html
+++ b/dashboard.html
@@ -79,35 +79,41 @@
             لوحة القيادة
           </a>
 
-          <a href="notifications.html" id="notificationLink">
+          <!-- First notification link with bell icon -->
+          <a href="notifications.html" id="notificationLink1">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
-            <span class="notification-badge hidden" id="notificationBadge"
+            <span class="notification-badge hidden" id="notificationBadge1"
               >0</span
             >
           </a>
 
-          <a href="notifications.html">
+          <!-- Second notification link with rocket icon -->
+          <a href="notifications.html" id="notificationLink2">
             <i class="fa-solid fa-rocket"></i>
             اشعارات
-          </a>
-
-          <a href="notifications.html">
-            <i class="fa-solid fa-bell"></i>
-            التنبيهات
-            <span class="notification-badge hidden" id="notificationBadge"
+            <span class="notification-badge hidden" id="notificationBadge2"
               >0</span
             >
           </a>
 
-          <a href="notifications.html">
+          <!-- Third notification link with bell icon -->
+          <a href="notifications.html" id="notificationLink3">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
-            <span class="notification-badge hidden" id="notificationBadge"
+            <span class="notification-badge hidden" id="notificationBadge3"
               >0</span
             >
           </a>
 
+          <!-- Fourth notification link with bell icon -->
+          <a href="notifications.html" id="notificationLink4">
+            <i class="fa-solid fa-bell"></i>
+            التنبيهات
+            <span class="notification-badge hidden" id="notificationBadge4"
+              >0</span
+            >
+          </a>
           <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
