--- a/dashboard.html
+++ b/dashboard.html
@@ -79,41 +79,14 @@
             لوحة القيادة
           </a>
 
-          <!-- First notification link with bell icon -->
-          <a href="notifications.html" id="notificationLink1">
+          <a href="#" id="notificationLink">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
-            <span class="notification-badge hidden" id="notificationBadge1"
+            <span class="notification-badge hidden" id="notificationBadge"
               >0</span
             >
           </a>
 
-          <!-- Second notification link with rocket icon -->
-          <a href="notifications.html" id="notificationLink2">
-            <i class="fa-solid fa-rocket"></i>
-            اشعارات
-            <span class="notification-badge hidden" id="notificationBadge2"
-              >0</span
-            >
-          </a>
-
-          <!-- Third notification link with bell icon -->
-          <a href="notifications.html" id="notificationLink3">
-            <i class="fa-solid fa-bell"></i>
-            التنبيهات
-            <span class="notification-badge hidden" id="notificationBadge3"
-              >0</span
-            >
-          </a>
-
-          <!-- Fourth notification link with bell icon -->
-          <a href="notifications.html" id="notificationLink4">
-            <i class="fa-solid fa-bell"></i>
-            التنبيهات
-            <span class="notification-badge hidden" id="notificationBadge4"
-              >0</span
-            >
-          </a>
           <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
