--- a/analytics.html
+++ b/analytics.html
@@ -1,3 +1,4 @@
+<!--ANALYTICS CODE-->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -115,7 +116,17 @@
 
       async function load() {
         const res = await fetch("/api/bookings");
-        allData = await res.json();
+        const rawData = await res.json();
+        allData = rawData.slice(1);
+
+        checkForNewBookings(allData.length);
+
+        filterAndRender();
+      }
+
+      function filterAndRender() {
+        renderTable(allData);
+        updateStats(allData);
         drawCharts(allData);
       }
 
