--- a/analytics.html
+++ b/analytics.html
@@ -1,4 +1,3 @@
-<!--ANALYTICS CODE-->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -116,17 +115,7 @@
 
       async function load() {
         const res = await fetch("/api/bookings");
-        const rawData = await res.json();
-        allData = rawData.slice(1);
-
-        checkForNewBookings(allData.length);
-
-        filterAndRender();
-      }
-
-      function filterAndRender() {
-        renderTable(allData);
-        updateStats(allData);
+        allData = await res.json();
         drawCharts(allData);
       }
 
