--- a/notifications.html
+++ b/notifications.html
@@ -453,6 +453,7 @@
           now.getMonth(),
           now.getDate()
         );
+        const tomorrow = new Date(today.getTime() + 24 * 60 * 60 * 1000);
         const weekAgo = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
         const monthAgo = new Date(today.getTime() - 30 * 24 * 60 * 60 * 1000);
 
@@ -462,7 +463,7 @@
           filteredBookings = allBookings.filter((b) => {
             if (!b.timestamp) return false;
             const bookingDate = new Date(b.timestamp);
-            return bookingDate >= today;
+            return bookingDate >= today && bookingDate < tomorrow;
           });
         } else if (status === "week") {
           filteredBookings = allBookings.filter((b) => {
