--- a/notifications.html
+++ b/notifications.html
@@ -453,7 +453,6 @@
           now.getMonth(),
           now.getDate()
         );
-        const tomorrow = new Date(today.getTime() + 24 * 60 * 60 * 1000);
         const weekAgo = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
         const monthAgo = new Date(today.getTime() - 30 * 24 * 60 * 60 * 1000);
 
@@ -463,7 +462,7 @@
           filteredBookings = allBookings.filter((b) => {
             if (!b.timestamp) return false;
             const bookingDate = new Date(b.timestamp);
-            return bookingDate >= today && bookingDate < tomorrow;
+            return bookingDate >= today;
           });
         } else if (status === "week") {
           filteredBookings = allBookings.filter((b) => {
