--- a/notifications.html
+++ b/notifications.html
@@ -327,7 +327,7 @@
         if (data) {
           document.getElementById("loginScreen").style.display = "none";
           document.getElementById("dashboardContent").style.display = "block";
-          localStorage.setItem("clinic_logged_in", "true");
+          sessionStorage.setItem("clinic_logged_in", "true");
           loadNotifications();
         } else {
           const msg = document.getElementById("errorMsg");
@@ -337,14 +337,14 @@
       }
 
       function logout() {
-        localStorage.removeItem("clinic_logged_in");
+        sessionStorage.removeItem("clinic_logged_in");
         document.getElementById("loginScreen").style.display = "flex";
         document.getElementById("dashboardContent").style.display = "none";
         document.getElementById("email").value = "";
         document.getElementById("password").value = "";
       }
 
-      if (localStorage.getItem("clinic_logged_in") === "true") {
+      if (sessionStorage.getItem("clinic_logged_in") === "true") {
         document.getElementById("loginScreen").style.display = "none";
         document.getElementById("dashboardContent").style.display = "block";
       }
@@ -383,6 +383,12 @@
         container.innerHTML = filteredBookings
           .map((booking) => {
             const timeAgo = getTimeAgo(booking.timestamp);
+
+            // Check if booking is less than 24 hours old
+            const isNew =
+              booking.timestamp &&
+              new Date() - new Date(booking.timestamp) < 24 * 60 * 60 * 1000;
+
             return `
             <div class="notification-item">
               <div class="notification-icon">
@@ -412,7 +418,11 @@
                 </div>
               </div>
               <div>
-                <span class="notification-badge-small">جديد</span>
+                ${
+                  isNew
+                    ? '<span class="notification-badge-small">جديد</span>'
+                    : ""
+                }
               </div>
             </div>
           `;
@@ -453,6 +463,7 @@
           now.getMonth(),
           now.getDate()
         );
+        const tomorrow = new Date(today.getTime() + 24 * 60 * 60 * 1000);
         const weekAgo = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
         const monthAgo = new Date(today.getTime() - 30 * 24 * 60 * 60 * 1000);
 
@@ -462,7 +473,7 @@
           filteredBookings = allBookings.filter((b) => {
             if (!b.timestamp) return false;
             const bookingDate = new Date(b.timestamp);
-            return bookingDate >= today;
+            return bookingDate >= today && bookingDate < tomorrow;
           });
         } else if (status === "week") {
           filteredBookings = allBookings.filter((b) => {
@@ -510,14 +521,14 @@
         const icon = themeToggle.querySelector("i");
         if (document.body.classList.contains("dark")) {
           icon.classList.replace("fa-moon", "fa-sun");
-          localStorage.setItem("clinic_theme", "dark");
+          sessionStorage.setItem("clinic_theme", "dark");
         } else {
           icon.classList.replace("fa-sun", "fa-moon");
-          localStorage.setItem("clinic_theme", "light");
+          sessionStorage.setItem("clinic_theme", "light");
         }
       });
 
-      if (localStorage.getItem("clinic_theme") === "dark") {
+      if (sessionStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
         const icon = themeToggle.querySelector("i");
         icon.classList.replace("fa-moon", "fa-sun");
@@ -542,7 +553,7 @@
       });
 
       // Auto-load and refresh
-      if (localStorage.getItem("clinic_logged_in") === "true") {
+      if (sessionStorage.getItem("clinic_logged_in") === "true") {
         loadNotifications();
         setInterval(loadNotifications, 30000); // Refresh every 30 seconds
       }
