--- a/notifications.html
+++ b/notifications.html
@@ -283,23 +283,24 @@
           </div>
 
           <div class="filter-buttons">
-            <button class="filter-btn active" onclick="filterByStatus('all')">
+            <button
+              class="filter-btn active"
+              onclick="filterByStatus('all', event)"
+            >
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today')">
+            <button class="filter-btn" onclick="filterByStatus('today', event)">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week')">
+            <button class="filter-btn" onclick="filterByStatus('week', event)">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month')">
+            <button class="filter-btn" onclick="filterByStatus('month', event)">
               هذا الشهر
             </button>
           </div>
 
-          <div id="notificationsList">
-            <!-- Notifications will be loaded here -->
-          </div>
+          <div id="notificationsList"></div>
         </div>
 
         <footer>© 2025 Smile Clinic</footer>
@@ -358,12 +359,46 @@
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
-          filteredBookings = allBookings;
-          renderNotifications();
+          allBookings = rawData.slice(1).reverse(); // Show newest first
+          applyFilter();
         } catch (error) {
           console.error("Error loading notifications:", error);
         }
+      }
+
+      function applyFilter() {
+        const now = new Date();
+        const todayStart = new Date(
+          now.getFullYear(),
+          now.getMonth(),
+          now.getDate()
+        );
+        const weekAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
+        const monthAgo = new Date(now.getTime() - 30 * 24 * 60 * 60 * 1000);
+
+        if (currentFilter === "today") {
+          filteredBookings = allBookings.filter((b) => {
+            if (!b.timestamp) return false;
+            const date = new Date(b.timestamp);
+            return date >= todayStart;
+          });
+        } else if (currentFilter === "week") {
+          filteredBookings = allBookings.filter((b) => {
+            if (!b.timestamp) return false;
+            const date = new Date(b.timestamp);
+            return date >= weekAgo;
+          });
+        } else if (currentFilter === "month") {
+          filteredBookings = allBookings.filter((b) => {
+            if (!b.timestamp) return false;
+            const date = new Date(b.timestamp);
+            return date >= monthAgo;
+          });
+        } else {
+          filteredBookings = allBookings;
+        }
+
+        renderNotifications();
       }
 
       function renderNotifications() {
@@ -375,54 +410,58 @@
               <i class="fa-solid fa-bell-slash"></i>
               <h3>لا توجد إشعارات</h3>
               <p>لم يتم العثور على أي حجوزات</p>
-            </div>
-          `;
+            </div>`;
           return;
         }
 
+        const now = new Date();
         container.innerHTML = filteredBookings
           .map((booking) => {
+            const bookingTime = new Date(booking.timestamp);
+            const diffMins = (now - bookingTime) / 60000;
+            const isNew = diffMins <= 5; // Show "جديد" only for 5 minutes
             const timeAgo = getTimeAgo(booking.timestamp);
+
             return `
-            <div class="notification-item">
-              <div class="notification-icon">
-                <i class="fa-solid fa-user-plus"></i>
-              </div>
-              <div class="notification-content">
-                <div class="notification-name">${
-                  booking.name || "غير محدد"
-                }</div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-phone"></i> ${
-                    booking.phone || "غير محدد"
-                  }
+              <div class="notification-item">
+                <div class="notification-icon">
+                  <i class="fa-solid fa-user-plus"></i>
                 </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-stethoscope"></i> ${
-                    booking.service || "غير محدد"
-                  }
+                <div class="notification-content">
+                  <div class="notification-name">${
+                    booking.name || "غير محدد"
+                  }</div>
+                  <div class="notification-details">
+                    <i class="fa-solid fa-phone"></i> ${
+                      booking.phone || "غير محدد"
+                    }
+                  </div>
+                  <div class="notification-details">
+                    <i class="fa-solid fa-stethoscope"></i> ${
+                      booking.service || "غير محدد"
+                    }
+                  </div>
+                  <div class="notification-details">
+                    <i class="fa-solid fa-calendar"></i> ${
+                      booking.appointment || "غير محدد"
+                    }
+                  </div>
+                  <div class="notification-time">
+                    <i class="fa-solid fa-clock"></i> ${timeAgo}
+                  </div>
                 </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-calendar"></i> ${
-                    booking.appointment || "غير محدد"
-                  }
-                </div>
-                <div class="notification-time">
-                  <i class="fa-solid fa-clock"></i> ${timeAgo}
-                </div>
-              </div>
-              <div>
-                <span class="notification-badge-small">جديد</span>
-              </div>
-            </div>
-          `;
+                ${
+                  isNew
+                    ? '<div><span class="notification-badge-small">جديد</span></div>'
+                    : ""
+                }
+              </div>`;
           })
           .join("");
       }
 
       function getTimeAgo(timestamp) {
         if (!timestamp) return "غير محدد";
-
         const now = new Date();
         const bookingDate = new Date(timestamp);
         const diffMs = now - bookingDate;
@@ -438,60 +477,23 @@
         return bookingDate.toLocaleDateString("ar-EG");
       }
 
-      function filterByStatus(status) {
+      function filterByStatus(status, event) {
         currentFilter = status;
-
-        // Update active button
-        document.querySelectorAll(".filter-btn").forEach((btn) => {
-          btn.classList.remove("active");
-        });
+        document
+          .querySelectorAll(".filter-btn")
+          .forEach((btn) => btn.classList.remove("active"));
         event.target.classList.add("active");
-
-        const now = new Date();
-        const today = new Date(
-          now.getFullYear(),
-          now.getMonth(),
-          now.getDate()
-        );
-        const weekAgo = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
-        const monthAgo = new Date(today.getTime() - 30 * 24 * 60 * 60 * 1000);
-
-        if (status === "all") {
-          filteredBookings = allBookings;
-        } else if (status === "today") {
-          filteredBookings = allBookings.filter((b) => {
-            if (!b.timestamp) return false;
-            const bookingDate = new Date(b.timestamp);
-            return bookingDate >= today;
-          });
-        } else if (status === "week") {
-          filteredBookings = allBookings.filter((b) => {
-            if (!b.timestamp) return false;
-            const bookingDate = new Date(b.timestamp);
-            return bookingDate >= weekAgo;
-          });
-        } else if (status === "month") {
-          filteredBookings = allBookings.filter((b) => {
-            if (!b.timestamp) return false;
-            const bookingDate = new Date(b.timestamp);
-            return bookingDate >= monthAgo;
-          });
-        }
-
-        renderNotifications();
+        applyFilter();
       }
 
       function filterNotifications() {
         const searchTerm = document
           .getElementById("searchInput")
           .value.toLowerCase();
+        const baseList =
+          currentFilter === "all" ? allBookings : filteredBookings;
 
-        if (searchTerm === "") {
-          filterByStatus(currentFilter);
-          return;
-        }
-
-        filteredBookings = allBookings.filter((booking) => {
+        filteredBookings = baseList.filter((booking) => {
           return (
             (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
             (booking.service &&
@@ -544,7 +546,7 @@
       // Auto-load and refresh
       if (localStorage.getItem("clinic_logged_in") === "true") {
         loadNotifications();
-        setInterval(loadNotifications, 30000); // Refresh every 30 seconds
+        setInterval(loadNotifications, 30000); // refresh every 30s
       }
     </script>
   </body>
