--- a/notifications.html
+++ b/notifications.html
@@ -347,6 +347,7 @@
       if (localStorage.getItem("clinic_logged_in") === "true") {
         document.getElementById("loginScreen").style.display = "none";
         document.getElementById("dashboardContent").style.display = "block";
+        loadNotifications();
       }
 
       // ======= NOTIFICATIONS LOGIC =======
@@ -358,7 +359,7 @@
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
+          allBookings = rawData.slice(1).reverse();
           filteredBookings = allBookings;
           renderNotifications();
         } catch (error) {
@@ -380,9 +381,17 @@
           return;
         }
 
+        const now = new Date();
+
         container.innerHTML = filteredBookings
           .map((booking) => {
             const timeAgo = getTimeAgo(booking.timestamp);
+
+            // Check if booking is less than 24 hours old
+            const isNew =
+              booking.timestamp &&
+              now - new Date(booking.timestamp) < 24 * 60 * 60 * 1000;
+
             return `
             <div class="notification-item">
               <div class="notification-icon">
@@ -412,7 +421,11 @@
                 </div>
               </div>
               <div>
-                <span class="notification-badge-small">جديد</span>
+                ${
+                  isNew
+                    ? '<span class="notification-badge-small">جديد</span>'
+                    : ""
+                }
               </div>
             </div>
           `;
@@ -453,6 +466,7 @@
           now.getMonth(),
           now.getDate()
         );
+        const tomorrow = new Date(today.getTime() + 24 * 60 * 60 * 1000);
         const weekAgo = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
         const monthAgo = new Date(today.getTime() - 30 * 24 * 60 * 60 * 1000);
 
@@ -462,7 +476,7 @@
           filteredBookings = allBookings.filter((b) => {
             if (!b.timestamp) return false;
             const bookingDate = new Date(b.timestamp);
-            return bookingDate >= today;
+            return bookingDate >= today && bookingDate < tomorrow;
           });
         } else if (status === "week") {
           filteredBookings = allBookings.filter((b) => {
@@ -544,7 +558,7 @@
       // Auto-load and refresh
       if (localStorage.getItem("clinic_logged_in") === "true") {
         loadNotifications();
-        setInterval(loadNotifications, 30000); // Refresh every 30 seconds
+        setInterval(loadNotifications, 30000);
       }
     </script>
   </body>
